rubocop + fix alignment of radios + checkboxes + remove one question

--- a/app/assets/stylesheets/questionnaire.scss
+++ b/app/assets/stylesheets/questionnaire.scss
@@ -59,7 +59,8 @@ $u-can-act-grey: #99b5cd;
     margin-right: 10px;
     margin-bottom: 10px;
   }
-  input[type="checkbox"] + label, input[type="radio"] + label {
+  input[type="radio"]:not(:checked) + label, input[type="radio"]:checked + label, input[type="checkbox"] + label {
+    padding-top: 0.25rem;
     display: inline;
   }
 }
